Takes a stab at fixing cumulative layout shift with the progress icons

--- a/style/base.scss
+++ b/style/base.scss
@@ -369,38 +369,52 @@ a:visited {
   position: relative;
   top: -16px;
   right: -8px;
+  height: auto;
+  width: 100%;
 }
 
 .progress-step-icon-2 {
   position: relative;
   left: 11px;
   top: -7px;
+  height: auto;
+  width: 100%;
 }
 
 .progress-step-icon-3 {
   position: relative;
   left: 12px;
+  height: auto;
+  width: 100%;
 }
 
 .progress-step-icon-4 {
   position: relative;
   left: 4px;
   top: 1px;
+  height: auto;
+  width: 100%;
 }
 
 .progress-step-icon-5 {
   position: relative;
   top: 1px;
+  height: auto;
+  width: 100%;
 }
 
 .progress-step-icon-6 {
   position: relative;
   top: 1px;
+  height: auto;
+  width: 100%;
 }
 
 .progress-step-icon-7 {
   position: relative;
   top: 1px;
+  height: auto;
+  width: 100%;
 }
 
 .progress-label {
